--- a/.github/workflows/render-deploy.yml
+++ b/.github/workflows/render-deploy.yml
@@ -6,40 +6,38 @@ on:
       - main  # Deploy on pushes to the main branch
 
 jobs:
-  deploy:
+  python-formatting:
     runs-on: ubuntu-latest
-
     steps:
-    # Step 1: Checkout Code
-    - name: Checkout Code
-      uses: actions/checkout@v3
+      - name: Checkout
+        uses: actions/checkout@v4
+      - name: Setup Python
+        uses: actions/setup-python@v4
+        with:
+          python-version: 3.10.12
+      - name: Install flake8
+        run: pip install flake8
+      - name: Run flak8
+        run: flake8 .
 
-    # Step 2: Set Up Python
-    - name: Set Up Python
-      uses: actions/setup-python@v4
-      with:
-        python-version: '3.9'
-
-    # Step 3: Install Dependencies
-    - name: Install Dependencies
-      run: |
-        python -m pip install --upgrade pip
-        pip install -r requirements.txt
-        pip install flake8  # Install flake8 for code quality checks
-
-    # Step 4: Run flake8
-    - name: Run flake8 Linting
-      run: |
-        flake8 . --max-line-length=88  # Adjust line length as needed
-      continue-on-error: false  # Fail pipeline if flake8 errors are found
-
-    # Step 5: Deploy to Render
-    - name: Deploy to Render
-      env:
-        RENDER_API_TOKEN: ${{ secrets.RENDER_API_TOKEN }}
-      run: |
-        curl -X POST \
-        -H "Authorization: Bearer $RENDER_API_TOKEN" \
-        -H "Content-Type: application/json" \
-        https://api.render.com/deploy \
-        -d '{"serviceId": "<your-service-id>"}'
+  unit-tests:
+    runs-on: ubuntu-latest
+    needs: python-formatting
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v4
+      - name: Setup Python
+        uses: actions/setup-python@v4
+        with:
+          python-version: 3.10.12
+      - name: Install dependencies from requirements.txt
+        run: |
+          python -m pip install --upgrade pip
+          pip install -r requirements.txt
+      - name: Install Flask
+        run: pip install Flask
+      - name: Run tests
+        env:
+          API_KEY: ${{ secrets.API_KEY }}
+        run: pytest app_test.py
+        continue-on-error: false
